[package]
name = "j-pls"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
description = "quick n' dirty non-global aliases/scripts"
license = "Apache-2.0"
keywords = ["cli", "devtool", "tool"]
categories = ["command-line-utilities"]

[[bin]]
name="pls"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owned_chars = "0.3.2"
